# notype

./: .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  TASK.md  package.json  pnpm-lock.yaml
desktop/: notype-autostart.desktop  notype-hotkey-sxhkd.desktop  notype.desktop
frontend/: index.html  main.js  pill.css  pill.html  pill.js  settings.css  settings.html  settings.js  styles.css  tauri-bridge.js
gnome-extension/notype@dev.notype/: extension.js  metadata.json
gnome-extension/notype@dev.notype/schemas/: org.gnome.shell.extensions.notype.gschema.xml
scripts/: install-autostart.sh  install-gnome-extension.sh  install-gnome-shortcut.sh  install-hotkey-sxhkd.sh  install-whisper-cli-local.sh  notype  notype-toggle-dbus.sh  prefetch-model.sh  setup-runtime.sh  toggle-recording.sh  uninstall-gnome-extension.sh  uninstall-hotkey-sxhkd.sh  verify-stt.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/core/: app.rs  audio.rs  config.rs  error.rs  inject.rs  ipc.rs  mod.rs  state.rs  stt.rs
