[package]
name = "notype"
version = "0.1.0"
edition = "2021"
description = "Local-first realtime dictation pill for Linux GNOME"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
futures-util = "0.3"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
